--- a/css/golf.css
+++ b/css/golf.css
@@ -5,67 +5,77 @@
 }
 
 body {
-
-}
-
-
-.container {
-    margin: 0 auto;
-}
-
-.flex {
     display: flex;
-}
-
-/*-----------Navigation----------------*/
-
-nav {
-    position:static;
-    top: 0px;
-    left: 0px;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    background-color: #f7f8fc;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: #10182f;
+  }
+  .container {
+    display: flex;
+    width: 1040px;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+  }
+  .card {
+    margin: 10px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    width: 500px;
+  }
+  .card-header img {
     width: 100%;
-    height: 25vh;
-    background-color: rgb(53, 107, 22);
-    color: white;
-    z-index: 1;
-}
-
-nav ul {
-    list-style:none;
-    justify-content:space-around;
-}
-
-nav div ul li {
-    padding-top: .2rem;
-    padding-bottom: .2rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    cursor: pointer;
-}
-
-/*-----------Hole-------------*/
-.div1 {
-    background-color: #333;
-    color: white;
-    height: 100px;
-}
-.div2 {
-    background-color: rgb(63, 119, 223);
-    height: 250px;
-}
-
-button {
-    background-color: #333;
-    color: white;
-    text-decoration: none;
+    height: 200px;
+    object-fit: cover;
+  }
+  .card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    min-height: 250px;
+  }
+  
+  .tag {
+    background;
+    border-radius: 10px;
     font-size: 12px;
-    border-radius: 8px;
-    padding: 5px 5px;
-    border: darkgoldenrod solid 1px;
-}
-
-label {
-    font-size: 20px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-weight: bold;
-}
+    margin: 0;
+    color: #fff;
+    padding: 2px 10px;
+    text-transform: uppercase;
+    cursor: pointer;
+    
+    
+  }
+  .tag-green{
+    background-color:#438025;
+  }
+  
+  .card-body p {
+    font-size: 13px;
+    margin: 0 0 40px;
+  }
+  .user {
+    display: flex;
+    margin-top: auto;
+  }
+  
+  .user img {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+  }
+  .user-info h5 {
+    margin: 0;
+  }
+  .user-info small {
+    color: #545d7a;
+  }
+  
