--- a/css/golf.css
+++ b/css/golf.css
@@ -38,23 +38,23 @@ body {
     justify-content: center;
     align-items: center;
     padding: 20px;
-    min-height: 250px;
+    height: 68vh;
+    background-color: mintcream;
   }
   
-  .tag {
-    background;
-    border-radius: 10px;
-    font-size: 12px;
-    margin: 0;
-    color: #fff;
-    padding: 2px 10px;
+  .title {
+    background: none;
+    border-radius: 5px;
+    font-size: 20px;
+    margin: 0 0 8px 0;
+    color: rgb(49, 64, 145);
+    padding: 5px 10px;
     text-transform: uppercase;
-    cursor: pointer;
+   
     
     
-  }
-  .tag-green{
-    background-color:#438025;
+    
+    
   }
   
   .card-body p {
@@ -79,3 +79,76 @@ body {
     color: #545d7a;
   }
   
+
+  /*------Drop Down Menu------------*/
+
+  /* Style The Dropdown Button */
+.drop-down-btn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .drop-down-btn {
+    position: relative;
+    display: inline-block;
+    border-radius: 5px;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    overflow: auto;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {
+      background-color: #f1f1f1;
+    }
+  
+
+  .drop-down:hover .dropdown-content {
+    display: block;
+  }
+  
+
+  .drop-down:hover .drop-down-btn {
+    background-color: #3e8e41;
+}
+
+/*------------Form-------------*/
+
+
+
+.radio-btn {
+    clear: right;
+    display: block;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.label-style {
+    margin: 5px;
+}
+.submit-btn {
+    background-color:#4CAF50;
+    font-size: 16px;
+    border-radius: 5px;
+    padding: 16px;
+    cursor: pointer;
+    color: white;
+    border: none;
+}
