--- a/css/golf.css
+++ b/css/golf.css
@@ -38,7 +38,7 @@ body {
     justify-content: center;
     align-items: center;
     padding: 20px;
-    height: 75vh;
+    height: 80vh;
     background-color: mintcream;
   }
   
@@ -66,7 +66,18 @@ body {
     margin-top: auto;
   }
   
-  
+  .user img {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+  }
+  .user-info h5 {
+    margin: 0;
+  }
+  .user-info small {
+    color: #545d7a;
+  }
   
 
   /*------Drop Down Menu------------*/
